==> MrLGQ/E0_Infrared_Remote_control/CODE - 20170324/CODE - 20170324/source/sst25vf_spi.c <==
#include "includes.h"

void sFLASH_CS_LOW(void)
{
  sFLASH_SPI->CR1 &= ((uint16_t)0xFFBF);
  sFLASH_SPI->CR1 = sFLASH_SPI_CR | ((uint16_t)0x0040);
  GPIO_ResetBits(sFLASH_MEM_CS_GPIO_PORT, sFLASH_MEM_CS_PIN);
}

void sFLASH_CS_HIGH(void)
{
  GPIO_SetBits(sFLASH_MEM_CS_GPIO_PORT, sFLASH_MEM_CS_PIN);
}

void sFLASH_Init(void)
{
  uint32_t Device_ID = 0;

  /* Initializes the peripherals used by the SPI FLASH driver */
  sFLASH_SPI_Init();

  /* Disable the write access to the FLASH */
  sFLASH_WriteDisable();

  /* Read FLASH identification */
  Device_ID = sFLASH_ReadID();

  if(Device_ID == sFLASH_SST25VF040_ID || Device_ID == sFLASH_SST25VF016_ID || Device_ID == sFLASH_SST25VF032_ID)
  {
    /* Select the FLASH: Chip Select low */
    sFLASH_CS_LOW();
    /* Send "Disable SO RY/BY# Status" instruction */
    sFLASH_SendByte(sFLASH_CMD_DBSY);
    /* Deselect the FLASH: Chip Select high */
    sFLASH_CS_HIGH();

    /* Select the FLASH: Chip Select low */
    sFLASH_CS_LOW();
    /* Send "Write Enable Status" instruction */
    sFLASH_SendByte(sFLASH_CMD_EWSR);
    /* Deselect the FLASH: Chip Select high */
    sFLASH_CS_HIGH();

    /* Select the FLASH: Chip Select low */
    sFLASH_CS_LOW();
    /* Send "Write Status Register" instruction */
    sFLASH_SendByte(sFLASH_CMD_WRSR);
    sFLASH_SendByte(0);
    /* Deselect the FLASH: Chip Select high */
    sFLASH_CS_HIGH();
  }
}

void sFLASH_WriteBuffer(uint8_t* pBuffer, uint32_t WriteAddr, uint16_t NumByteToWrite)
{
  uint8_t NumOfPage = 0, NumOfSingle = 0, Addr = 0, count = 0, temp = 0;

  Addr = WriteAddr % sFLASH_PAGESIZE;
  count = sFLASH_PAGESIZE - Addr;
  NumOfPage =  NumByteToWrite / sFLASH_PAGESIZE;
  NumOfSingle = NumByteToWrite % sFLASH_PAGESIZE;

  if (Addr == 0) /* WriteAddr is sFLASH_PAGESIZE aligned  */
  {
    if (NumOfPage == 0) /* NumByteToWrite < sFLASH_PAGESIZE */
    {
      sFLASH_WritePage(pBuffer, WriteAddr, NumByteToWrite);
    }
    else /* NumByteToWrite > sFLASH_PAGESIZE */
    {
      while (NumOfPage--)
      {
        sFLASH_WritePage(pBuffer, WriteAddr, sFLASH_PAGESIZE);
        WriteAddr +=  sFLASH_PAGESIZE;
        pBuffer += sFLASH_PAGESIZE;
      }

      sFLASH_WritePage(pBuffer, WriteAddr, NumOfSingle);
    }
  }
  else /* WriteAddr is not sFLASH_PAGESIZE aligned  */
  {
    if (NumOfPage == 0) /* NumByteToWrite < sFLASH_PAGESIZE */
    {
      if (NumOfSingle > count) /* (NumByteToWrite + WriteAddr) > sFLASH_PAGESIZE */
      {
        temp = NumOfSingle - count;

        sFLASH_WritePage(pBuffer, WriteAddr, count);
        WriteAddr +=  count;
        pBuffer += count;

        sFLASH_WritePage(pBuffer, WriteAddr, temp);
      }
      else
      {
        sFLASH_WritePage(pBuffer, WriteAddr, NumByteToWrite);
      }
    }
    else /* NumByteToWrite > sFLASH_PAGESIZE */
    {
      NumByteToWrite -= count;
      NumOfPage =  NumByteToWrite / sFLASH_PAGESIZE;
      NumOfSingle = NumByteToWrite % sFLASH_PAGESIZE;

      sFLASH_WritePage(pBuffer, WriteAddr, count);
      WriteAddr +=  count;
      pBuffer += count;

      while (NumOfPage--)
      {
        sFLASH_WritePage(pBuffer, WriteAddr, sFLASH_PAGESIZE);
        WriteAddr +=  sFLASH_PAGESIZE;
        pBuffer += sFLASH_PAGESIZE;
      }

      if (NumOfSingle != 0)
      {
        sFLASH_WritePage(pBuffer, WriteAddr, NumOfSingle);
      }
    }
  }
}

uint8_t sFLASH_SendByte(uint8_t byte)
{
  /* Loop while DR register in not empty */
  while (SPI_I2S_GetFlagStatus(sFLASH_SPI, SPI_I2S_FLAG_TXE) == RESET);

  /* Send byte through the SPI peripheral */
  SPI_I2S_SendData(sFLASH_SPI, byte);

  /* Wait to receive a byte */
  while (SPI_I2S_GetFlagStatus(sFLASH_SPI, SPI_I2S_FLAG_RXNE) == RESET);

  /* Return the byte read from the SPI bus */
  return SPI_I2S_ReceiveData(sFLASH_SPI);
}
