==> bluzDK/bluzDK-firmware/platform/MCU/NRF51/SPARK_Firmware_Driver/src/sst25vf_spi.c <==
#include "sst25vf_spi.h"
#include "spi_master.h"
#include "nrf_gpio.h"
#include "nrf_error.h"
#include "app_util_platform.h"

void sFLASH_Init(void)
{
	uint32_t Device_ID = 0;
//	spi_base_address = spi_master_init(SFLASH_SPI, SPI_MODE0, (bool)0);
	spi_master_config_t spi_config = SPI_MASTER_INIT_DEFAULT;
	spi_config.SPI_Pin_SCK = SPIM0_SCK_PIN;
	spi_config.SPI_Pin_MISO = SPIM0_MISO_PIN;
	spi_config.SPI_Pin_MOSI = SPIM0_MOSI_PIN;
	spi_config.SPI_Pin_SS = SPIM0_SS_PIN;
	spi_config.SPI_CONFIG_ORDER = SPI_CONFIG_ORDER_MsbFirst;
	spi_config.SPI_PriorityIRQ = APP_IRQ_PRIORITY_HIGH;

	spi_master_open(SPI_MASTER_0, &spi_config);
	spi_master_evt_handler_reg(SPI_MASTER_0, spi_master_event_handler);

	/* Disable the write access to the FLASH */
	sFLASH_WriteDisable();

	/* Read FLASH identification */
	Device_ID = sFLASH_ReadID();

	if(Device_ID == sFLASH_SST25VF040_ID || Device_ID == sFLASH_SST25VF016_ID || Device_ID == sFLASH_SST25VF020_ID)
	{
		/* Select the FLASH: Chip Select low */
		sFLASH_CS_LOW();
		/* Send "Disable SO RY/BY# Status" instruction */
		sFLASH_SendByte(sFLASH_CMD_DBSY);
		/* Deselect the FLASH: Chip Select high */
		sFLASH_CS_HIGH();

		/* Select the FLASH: Chip Select low */
		sFLASH_CS_LOW();
		/* Send "Write Enable Status" instruction */
		sFLASH_SendByte(sFLASH_CMD_EWSR);
		/* Deselect the FLASH: Chip Select high */
		sFLASH_CS_HIGH();

		/* Select the FLASH: Chip Select low */
		sFLASH_CS_LOW();
		/* Send "Write Status Register" instruction */
		sFLASH_SendByte(sFLASH_CMD_WRSR);
		sFLASH_SendByte(0);
		/* Deselect the FLASH: Chip Select high */
		sFLASH_CS_HIGH();
	}
}

void sFLASH_WriteBuffer(const uint8_t *pBuffer, uint32_t WriteAddr, uint32_t NumByteToWrite)
{
  uint32_t evenBytes;

  /* If write starts at an odd address, need to use single byte write
   * to write the first address. */
  if ((WriteAddr & 0x1) == 0x1)
  {
    sFLASH_WriteByte(WriteAddr, *pBuffer++);
    ++WriteAddr;
    --NumByteToWrite;
  }

  /* Write bulk of bytes using auto increment write, with restriction
   * that address must always be even and two bytes are written at a time. */
  evenBytes = NumByteToWrite & ~0x1;
  if (evenBytes)
  {
    sFLASH_WriteBytes(pBuffer, WriteAddr, evenBytes);
    NumByteToWrite -= evenBytes;
  }

  /* If number of bytes to write is odd, need to use a single byte write
   * to write the last address. */
  if (NumByteToWrite)
  {
    pBuffer += evenBytes;
    WriteAddr += evenBytes;
    sFLASH_WriteByte(WriteAddr, *pBuffer++);
  }
}

static uint8_t sFLASH_SendByte(uint8_t byte)
{
	tx_data[0] = byte;
	rx_data[0] = 0x0;

	spi_transmission_completed = false;
	uint32_t err_code = spi_master_send_recv(SPI_MASTER_0,(uint8_t *)tx_data, 1, rx_data, 1);
	if (err_code == NRF_SUCCESS)
	{
		while(spi_transmission_completed == false) { }
	}
	else { }
	return rx_data[0];
}

static void sFLASH_CS_LOW(void)
{
	nrf_gpio_pin_clear(SPIM0_SS_PIN);
}

static void sFLASH_CS_HIGH(void)
{
	nrf_gpio_pin_set(SPIM0_SS_PIN);
}
